# Solution-Sara_Romac

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROMPTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3ba408c1afc7_create_tickets_table.py
ci/: README.md
docs/: index.html
scripts/: generate_openapi.py
src/tickethub/: main.py
src/tickethub/api/: auth.py  system.py  tickets.py
src/tickethub/core/: background.py  cache.py  config.py  logging.py  rate_limit.py  security.py
src/tickethub/db/: session.py
src/tickethub/models/: ticket.py
src/tickethub/schemas/: ticket.py
src/tickethub/services/: dummyjson_client.py  sync.py  ticket_repository.py
tests/: conftest.py
tests/integration/: test_auth.py  test_sync_service.py  test_ticket_endpoints.py
tests/unit/: test_cache.py  test_sync_transformations.py
