[project]
name = "tickethub"
version = "0.1.0"
description = "TicketHub - middleware REST servis za support tickete (DummyJSON izvor)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "sqlalchemy==2.0.31",
    "greenlet==3.0.3",
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "python-jose[cryptography]==3.3.0",
    "slowapi==0.1.9",
    "redis==5.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.5.0",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends()/Query() u default argumentima je standardni FastAPI idiom, ne bug.
per-file-ignores = { "src/tickethub/api/*.py" = ["B008"], "src/tickethub/core/security.py" = ["B008"] }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
